# RAG-kingkiller-wiki

./: .gitignore  README.md  claude.md  conftest.py  pyproject.toml
data/: adversarial_sample.jsonl  chunks_labeled_manifest.json  manual_labels.jsonl
docs/: chunk-schema-reference.md  decisions.md  kingkiller-dataset-notes.md  manual-labeling-guide.md
docs/decisions/: evaluation.md  index.md  labeling.md  pipeline.md
ingest/: __init__.py  checks.py  chunk_pages.py  download_model.py  draw_sample.py  embedding_bakeoff.py  entity_graph.py  explore.py  fetch_pages.py  fetch_redirects.py  generate_questions.py  label_llm.py  label_manually.py  local_embedder.py  validate_labeler.py
reports/: exploration.md  exploration_stats.json
scripts/: label_audit.py
tasks/: 01-ingest-fetch.md  02-explore-corpus.md  03-chunker.md  04-adversarial_sample.md  05-labeler.md  06-entity-graph.md  07-scope-adjust.md  08-single-hop-embedding.md
tests/: test_checks.py  test_chunk_pages.py  test_draw_sample.py  test_embedding_bakeoff.py  test_entity_graph.py  test_fetch_pages.py  test_generate_questions.py  test_label_llm.py  test_label_manually.py  test_validate_labeler.py
