[project]
name = "rag-kingkiller-wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mwparserfromhell>=0.7.2",
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that hit the live wiki API (excluded by default)",
]
addopts = "-m 'not network'"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "responses>=0.26.2",
]
